[gd_scene load_steps=4 format=2]

[ext_resource path="res://Image-assets/inventory-slot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/inventorySlot.gd" type="Script" id=2]
[ext_resource path="res://Fonts/charPanelFont_2.tres" type="DynamicFont" id=3]

[node name="inventorySlot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -336.0
margin_bottom = -672.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slotBkgr" type="TextureRect" parent="."]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itemIcon" type="TextureButton" parent="slotBkgr"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = -24.5
margin_right = 29.5
margin_bottom = 24.5
focus_mode = 0
enabled_focus_mode = 0
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="productCount" type="Label" parent="slotBkgr"]
margin_left = 43.0994
margin_top = 71.3152
margin_right = 87.0994
margin_bottom = 91.3152
custom_fonts/font = ExtResource( 3 )
text = "[count]"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="productName" type="Label" parent="slotBkgr"]
margin_left = 4.63214
margin_top = 3.99751
margin_right = 48.6321
margin_bottom = 23.9975
custom_fonts/font = ExtResource( 3 )
text = "[name]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deleteCheckbox" type="CheckBox" parent="."]
visible = false
anchor_right = 0.25
anchor_bottom = 0.25
margin_left = 64.1835
margin_top = 1.24344
margin_right = 64.1835
margin_bottom = 1.24344
rect_scale = Vector2( 1.2, 1.2 )
[connection signal="toggled" from="deleteCheckbox" to="." method="_on_deleteCheckbox_toggled"]
